# Salesforce_CrewAI

outputs/data_analyzer/: analysis_results_2025.json
outputs/salesforce_connector/: extracted_data_2025.csv
outputs/summary_generator/: summary_2025.md
outputs/translator/: translated_summary_2025.md
salesforce_analytics/: .gitignore  DocckerFile  README.md  api.py  pyproject.toml
salesforce_analytics/outputs/data_analyzer/: analysis_results_2025.json
salesforce_analytics/outputs/salesforce_connector/: Account_2025.csv  Lead_2025.csv  Opportunity_2025.csv  User_2025.csv  extracted_data_2025.csv
salesforce_analytics/outputs/summary_generator/: summary_2025.md
salesforce_analytics/outputs/translator/: translated_summary_2025.md
salesforce_analytics/src/salesforce_analytics/: crew.py  main.py
salesforce_analytics/src/salesforce_analytics/config/: agents.yaml  tasks.yaml
salesforce_analytics/src/salesforce_analytics/outputs/data_analyzer/: analysis_results_2025.json
salesforce_analytics/src/salesforce_analytics/outputs/salesforce_connector/: extracted_data_2025.csv
salesforce_analytics/src/salesforce_analytics/outputs/summary_generator/: summary_2025.md
salesforce_analytics/src/salesforce_analytics/outputs/translator/: translated_summary_2025.md
salesforce_analytics/src/salesforce_analytics/tools/: models.py  salesforce_connection_tool.py
